2004-06-23  Michael Natterer  <mitch@gimp.org>
	* modules/controller_midi.c: added utility function midi_event()
	which assembles a GimpControllerEventValue and emits it.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13738 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-23  Michael Natterer  <mitch@gimp.org>
 
+	* modules/controller_midi.c: added utility function midi_event()
+	which assembles a GimpControllerEventValue and emits it.
+
+2004-06-23  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpenumaction.[ch]
 	* app/widgets/gimppluginaction.[ch]
 	* app/widgets/gimpstringaction.[ch]: added parameters to the
