--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-23  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* app/tools/*.c: HIGify capitalization for dialogs.  More
+	progress on bug #123699.
+	
 2004-06-23  Michael Natterer  <mitch@gimp.org>
 
 	* modules/controller_midi.c: added utility function midi_event()
