--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-24  Sven Neumann  <sven@gimp.org>
+
+	* etc/controllerrc: commented out the linux_input controller
+	configuration.
+
 2004-06-23  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* app/tools/*.c: HIGify capitalization for dialogs.  More
