Bill Skaggs  <weskaggs@primate.ucdavis.edu>
	* app/actions/file-commands.c: make "Revert" only ask for
	confirmation if image is dirty.  Fixes bug #141971.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13742 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-23  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
+	* app/actions/file-commands.c: make "Revert" only ask for 
+	confirmation if image is dirty.  Fixes bug #141971.
+	
+2004-06-23  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
 	* app/gui/*.c:
 	* app/widgets/*.c:
 	* etc/templaterc: HIGify capitalization.  Should finish bug #123699
