--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-06-24  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpcontrollerwheel.[ch]: renamed function
+	gimp_controller_wheel_scrolled() to
+	gimp_controller_wheel_scroll().
+
+	* app/display/gimpdisplayshell-callbacks.c
+	(gimp_display_shell_canvas_tool_events): changed accordingly.
+
+2004-06-24  Michael Natterer  <mitch@gimp.org>
+
 	* etc/controllerrc: fix typo in wheel controller mapping.
 
 2004-06-24  Michael Natterer  <mitch@gimp.org>
