--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-06-25  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimppropwidgets.[ch]: added gimp_prop_label_new().
+
+	* app/widgets/gimpgrideditor.c: HIGified capitalization.
+
+2004-06-25  Michael Natterer  <mitch@gimp.org>
+
 	* modules/controller_linux_input.c
 	* modules/controller_midi.c: remember the source ID returned by
 	g_io_add_watch() and remove it when changing the device, so the
