2004-06-25  Michael Natterer  <mitch@gimp.org>
	* app/gui/preferences-dialog.c: more work on the controller page,
	made integer controller properties editable.

	* modules/controller_midi.c: allow to specify the MIDI channel to
	generate events from. Default to -1 (all channels).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13753 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-25  Michael Natterer  <mitch@gimp.org>
+
+	* app/gui/preferences-dialog.c: more work on the controller page,
+	made integer controller properties editable.
+
+	* modules/controller_midi.c: allow to specify the MIDI channel to
+	generate events from. Default to -1 (all channels).
+
 2004-06-24  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* plug-ins/gfig/gfig.[ch]:
