--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-06-25  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/preferences-dialog.c (prefs_dialog_new): work around
+	GTK+ bug #143270 (set the cursor on the selected model path
+	instead of selecting the iter in the selection). Fixes random
+	theme switching when selecting the "Theme" page.
+
+2004-06-25  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/gimpbrushgenerated.c: added properties for all brush
 	parameters.
 
