Bill Skaggs  <weskaggs@primate.ucdavis.edu>
	* plug-ins/common/dog.c: added Difference of Gaussians edge
	detect plug-in.

	* plug-ins/common/plugin-defs.pl:
	* plug-ins/common/Makefile.am: added dog and regenerated
	Makefile.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13758 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-06-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins/common/dog.c: added Difference of Gaussians edge
+	detect plug-in.
+
+	* plug-ins/common/plugin-defs.pl:
+	* plug-ins/common/Makefile.am: added dog and regenerated
+	Makefile.
+	
 2004-06-25  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/context-actions.c: added GIMP_ACTION_SELECT_SET
