--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-25  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* plug-ins/common/zealouscrop.c: Moved Zealous Crop from
+	<Image>/Layer/Crop to <Image>/Image/Crop because it affects the
+	entire image.
+
 2004-06-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* plug-ins/common/dog.c: added Difference of Gaussians edge
