--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins/common/unsharp.c: speed up preview by allocating tile
+	cache before creating dialog.  Should fix bug #144972.
+	
 2004-06-25  Philip Lafleur  <plafleur@cvs.gnome.org>
 
 	* plug-ins/common/zealouscrop.c: Moved Zealous Crop from
