--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-26  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* app/tools/gimpclonetool.c: added button_release callback
+	to fix bug #145022.
+	
 2004-06-26  Philip Lafleur  <plafleur@cvs.gnome.org>
 
 	* plug-ins/common/unsharp.c: Use GTK_PREVIEW_GRAYSCALE if source
