2004-06-26  Philip Lafleur  <plafleur@cvs.gnome.org>
	* plug-ins/common/unsharp.c: Preview now works correctly with
	RGBA and grayscale-alpha images. Fixes bug #144971.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13764 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-26  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* plug-ins/common/unsharp.c: Preview now works correctly with
+	RGBA and grayscale-alpha images. Fixes bug #144971.
+
 2004-06-26  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* app/tools/gimpclonetool.c: added button_release callback
