2004-06-27  Michael Schumacher <schumaml@cvs.gnome.org>
	* libgimp/gimp.def: added _gimp_tile_cache_flush_drawable because
	it is used in a plug-in. See bug 145051.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13765 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-27  Michael Schumacher <schumaml@cvs.gnome.org>
+
+	* libgimp/gimp.def: added _gimp_tile_cache_flush_drawable because
+	it is used in a plug-in. See bug 145051.
+
 2004-06-26  Philip Lafleur  <plafleur@cvs.gnome.org>
 
 	* plug-ins/common/unsharp.c: Preview now works correctly with
