2004-06-28  Simon Budig  <simon@gimp.org>
	* app/tools/gimpvectortool.c: fixed drawing code to properly
	update after deleting nodes via BackSpace/Delete.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13767 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-28  Simon Budig  <simon@gimp.org>
+
+	* app/tools/gimpvectortool.c: fixed drawing code to properly
+	update after deleting nodes via BackSpace/Delete.
+
 2004-06-27  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* app/tools/gimplevelstool.c: removed two small chunks of code.
