--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-28  Sven Neumann  <sven@gimp.org>
 
+	* libgimp/gimpdrawable.c: removed wrong note about using
+	_gimp_tile_cache_flush_drawable() from the API docs.
+
+2004-06-28  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/dog.c (dog): ifdef'ed out calls to
 	_gimp_tile_cache_flush_drawable() since it can't be used from a
 	plug-in. Removed trailing whitespace and redundant includes.
