--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-28  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/dog.c: applied HIG rules to the GUI and slightly
+	rearranged it to get a more compact layout. Applied GIMP coding style.
+
+2004-06-28  Sven Neumann  <sven@gimp.org>
+
 	* libgimp/gimpdrawable.c: removed wrong note about using
 	_gimp_tile_cache_flush_drawable() from the API docs.
 
