--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,13 @@
 2004-06-28  Sven Neumann  <sven@gimp.org>
 
+	* app/actions/actions.c (action_select_object): added missing
+	return value.
+
+2004-06-28  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/dog.c: applied HIG rules to the GUI and slightly
-	rearranged it to get a more compact layout. Applied GIMP coding style.
+	rearranged it to get a more compact layout. Applied GIMP coding
+	style.
 
 2004-06-28  Sven Neumann  <sven@gimp.org>
 
