2004-06-28  Sven Neumann  <sven@gimp.org>
	* app/gui/gui.c (gui_initialize_after_callback): select the
	standard tool.

	* app/tools/tool_manager.c: cosmetics.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13774 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-28  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/gui.c (gui_initialize_after_callback): select the
+	standard tool.
+
+	* app/tools/tool_manager.c: cosmetics.
+
 2004-06-28  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimplevelstool.c: reverted fix for bug #141930. These
