2004-06-28  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpcontainergridview.c:
	#include "libgimpwidgets/gimpwidgets.h"


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13778 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-28  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpcontainergridview.c:
+	#include "libgimpwidgets/gimpwidgets.h"
+
+2004-06-28  Michael Natterer  <mitch@gimp.org>
+
 	Fixed bug #141930 while keeping bug #132322 fixed:
 
 	* app/base/curves.c (curves_lut_func)
