2004-06-28  Michael Natterer  <mitch@gimp.org>
	* app/widgets/Makefile.am
	* app/widgets/gimpselectiondata.[ch]: new files containing the
	code which encodes/decodes all sorts of stuff to/from its
	GtkSelectionData representation. Used to live in gimpdnd.c

	* app/widgets/gimpdnd.c: use the new functions (unclutters the
	file quite a bit), converted tabs to spaces.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13779 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-06-28  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/Makefile.am
+	* app/widgets/gimpselectiondata.[ch]: new files containing the
+	code which encodes/decodes all sorts of stuff to/from its
+	GtkSelectionData representation. Used to live in gimpdnd.c
+
+	* app/widgets/gimpdnd.c: use the new functions (unclutters the
+	file quite a bit), converted tabs to spaces.
+
+2004-06-28  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpcontainergridview.c:
 	#include "libgimpwidgets/gimpwidgets.h"
 
