--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-29  Marco Ciampa  <ciampix@libero.it>
+
+        * it.po: updated italian translation.
+
 2004-06-16  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: updated italian translation.
