2004-06-29  Philip Lafleur  <plafleur@cvs.gnome.org>
	* plug-ins/common/unsharp.c: The preview's row buffer was
	accidentally made way too large.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13785 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-29  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* plug-ins/common/unsharp.c: The preview's row buffer was
+	accidentally made way too large.
+
 2004-06-29  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpwidgets-utils.[ch]: added new function
