2004-06-29  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpcontainertreeview-dnd.c: don't free the SVG data
	after dropping, it's owned by GtkSelectionData.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13787 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-29  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpcontainertreeview-dnd.c: don't free the SVG data
+	after dropping, it's owned by GtkSelectionData.
+
+2004-06-29  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpdnd.c: use gtk_target_list_add() instead of
 	gtk_target_list_add_table() because the latter prepends the
 	targets to the internal list which screws the order (== priority)
